
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_char ;


 int ASN_OCTET_STRING ;
 int fatal (char*) ;

__attribute__((used)) static u_char *
asn_get_octet_string (u_char *pkt, u_char *dst)
{
 int len, i = 0;

 if (*pkt++ != ASN_OCTET_STRING)
  fatal ("error: error while talking to client\n");

 len = *pkt++;

 while (len--)
  dst[i++] = *pkt++;

 return (pkt);
}
